# agenticDS

./: .gitignore  COMPLETE_PRODUCT_ROADMAP_V2.md  V3.md  codebase_dump_20260101_184509.md  collect.py  debug_run.sh  docker-compose.yml  git_setup.sh  nginx.conf  phase2.md  startup.sh
backend/: Dockerfile  debug_state.py  main.py  pyproject.toml  requirements.txt  seed_database.py  test_api_ingest.py  test_renderer.py  test_sandbox_api.py
backend/agents/: sandbox_agent.py
backend/database/: connection.py  models.py
backend/rendering/: universal_renderer.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: DesignSystemRenderer.tsx  Sandbox.tsx
dashboard/src/hooks/: useDesignSystem.ts
plugin/: code.js  manifest.json  package-lock.json  package.json  tsconfig.json
plugin/extractors/: colors.js  typography.js
plugin/src/: code.ts  ui.html
plugin/src/extractors/: colors.ts  typography.ts
